Add creators votes API and UI
