# openapi.yaml
@@ -289,6 +289,50 @@ paths:
                           type: string
                           example: http://www.instagram.com
 
+  /creators/{creatorId}/votes:
+    get:
+      operationId: GetCreatorsVotes
+      description: Returns all votes by creator id
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  users:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                          format: uuid
+                          example: e0476273-83cd-4772-a4f9-f0280e3bb2af
+                        username:
+                          type: string
+                          example: jondoe
+                        passord:
+                          type: string
+                          example: password123
+                        votes_up:
+                          type: integer
+                          example: 10
+                        votes_down:
+                          type: integer
+                          example: 5
+                        platform_id:
+                          type: string
+                          format: uuid
+                          example: e0476273-83cd-4772-a4f9-f0280e3bb2af
+                        name:
+                          type: string
+                          example: instagram
+                        url:
+                          type: string
+                          example: http://www.instagram.com
+
   /platforms:
     get:
       operationId: GetPlatforms
